--- a/Aoc2024/Aoc/AoC.csproj
+++ b/Aoc2024/Aoc/AoC.csproj
@@ -10,7 +10,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="files\" />
+    <Compile Remove="files\**" />
+    <EmbeddedResource Remove="files\**" />
+    <None Remove="files\**" />
   </ItemGroup>
 
 </Project>
