Aoc2024/testing/Day14Tests.cs

--- a/Aoc2024/src/AoC.csproj
+++ b/Aoc2024/src/AoC.csproj
@@ -15,4 +15,8 @@
     <None Remove="files\**" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="System.Drawing.Common" Version="9.0.0" />
+  </ItemGroup>
+
 </Project>
