feature: added aoc 2015 day 1 p1/2

--- a/Aoc/benchmarks/AoCBenchmarks.csproj
+++ b/Aoc/benchmarks/AoCBenchmarks.csproj
@@ -15,4 +15,8 @@
     <ProjectReference Include="..\src\AoC.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="2025\" />
+  </ItemGroup>
+
 </Project>
