--- a/Aoc/src/AoC.csproj
+++ b/Aoc/src/AoC.csproj
@@ -19,4 +19,8 @@
     <PackageReference Include="System.Drawing.Common" Version="9.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="2025\" />
+  </ItemGroup>
+
 </Project>
